fixed issues with the cards not floating correctly and the header color not showing

--- a/float-grid.css
+++ b/float-grid.css
@@ -32,7 +32,7 @@
  	clear: both;
  }
 
- .col-3 .col-4, .col-6, .col-12 {
+ .col-3 .col-4 .col-6 .col-12 {
  	float: left;
 
  	/*Gutters:
